--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"
+    name="viewport" />
   <meta name="format-detection" content="telephone=yes" />
-  <title>doubleleven</title>
+  <title>fawa</title>
+  <style>
+    body {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      padding-bottom: 0;
+      padding-bottom: constant(safe-area-inset-bottom);
+      /* 兼容 iOS < 11.2 */
+      padding-bottom: env(safe-area-inset-bottom);
+      /* 兼容 iOS >= 11.2 */
+    }
+
+  </style>
 </head>
 
 <body>
