--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover"
     name="viewport" />
   <meta name="format-detection" content="telephone=yes" />
-  <title>fawa</title>
+  <title>樊文花双11豪礼抢先享</title>
   <style>
     body {
       position: fixed;
